--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Aisha",
-  "name": "Aisha chat for any code repository",
+  "name": "Aisha chat for any document",
   "icons": [
     {
       "src": "favicon.ico",
